--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 @import url(https://cdn.jsdelivr.net/gh/moonspam/NanumSquare@1.0/nanumsquare.css);
 
+html{scroll-behavior:smooth}
+
 body{
-	padding: 40px 0px;
 	font-family: 'NanumSquare';
 	margin: 0 auto;
 }
@@ -43,10 +44,14 @@ a {
 .page {
 	display: block;
 	width: 100%;
+	height: 1000px;
+}
+
+#home {
 	height: 600px;
 }
 
-.statistics {
+#statistics {
 	background: red;
 }
 
@@ -69,7 +74,13 @@ span.center{
 	left: 0%;
 	width: 300px;
 	height: 300px;
-	text-align: center;
 	transform: scale(0.8);
 	border-radius: 50%;
+}
+
+#statistics h1 {
+	position: relative;
+	top: 50%;
+	text-align: center;
+	transform: translate(0%, -50%);
 }
