--- a/style.css
+++ b/style.css
@@ -41,6 +41,15 @@ header {
 }
 */
 
+.title {
+	position: relative;
+	top: 50%;
+	text-align: center;
+	color: white;
+	line-height: 80%;
+	transform: translate(0%, -50%);
+}
+
 a {
 	font-weight: 700;
 	font-size: 1.5rem;
@@ -51,12 +60,17 @@ a {
 .page {
 	display: block;
 	width: 100%;
-	height: 1000px;
+	height: 2000px;
 }
 
 #home {
-	height: 600px;
+	height: 700px;
 	background: crimson;
+	/*
+	background-image: url("https://postfiles.pstatic.net/MjAxOTExMjdfMjY0/MDAxNTc0NzkzNTUwMzg2.b7FRv2Dg7pYY9ca-EDGJCAXfhShdE97SdJ-GZY-UGMUg.LvD8aIouIeLgNJiDAnC9ffz7yUvNmG30wmEBMXSyqmQg.PNG.uglycat8/image.png?type=w773");
+	background-size: 100% auto;
+	background-repeat: no-repeat;
+	*/
 }
 
 #statistics {
@@ -66,11 +80,15 @@ a {
 .chart-section {
 	display: block;
 	width: 100%;
+	top: 150px;
 	position: relative;
 }
 
 .chart-title {
 	text-align: center;
+	color: crimson;
+	height: 300px;
+	font-weight: 700; 
 }
 
 .pie-chart1 {
@@ -96,13 +114,26 @@ span.center{
 	border-radius: 50%;
 }
 
-#statistics .text {
+.pie-chart1 .text {
 	position: relative;
 	top: 50%;
 	text-align: center;
 	color: crimson;
 	line-height: 80%;
 	font-weight: 800;
+	transform: translate(0%, -50%);
+}
+
+.s1 {
+	display: block;
+}
+
+.s1 .text {
+	position: relative;
+	top: 50%;
+	text-align: center;
+	color: white;
+	line-height: 80%;
 	transform: translate(0%, -50%);
 }
 
