--- a/style.css
+++ b/style.css
@@ -60,12 +60,12 @@ a {
 .page {
 	display: block;
 	width: 100%;
-	height: 2000px;
+	height: 700px;
 }
 
 #home {
+	background: palevioletred;
 	height: 700px;
-	background: crimson;
 	/*
 	background-image: url("https://postfiles.pstatic.net/MjAxOTExMjdfMjY0/MDAxNTc0NzkzNTUwMzg2.b7FRv2Dg7pYY9ca-EDGJCAXfhShdE97SdJ-GZY-UGMUg.LvD8aIouIeLgNJiDAnC9ffz7yUvNmG30wmEBMXSyqmQg.PNG.uglycat8/image.png?type=w773");
 	background-size: 100% auto;
@@ -75,6 +75,7 @@ a {
 
 #statistics {
 	background: white;
+	height: 2000px;
 }
 
 .chart-section {
@@ -86,7 +87,7 @@ a {
 
 .chart-title {
 	text-align: center;
-	color: crimson;
+	color: palevioletred;
 	height: 300px;
 	font-weight: 700; 
 }
@@ -118,7 +119,7 @@ span.center{
 	position: relative;
 	top: 50%;
 	text-align: center;
-	color: crimson;
+	color: palevioletred;
 	line-height: 80%;
 	font-weight: 800;
 	transform: translate(0%, -50%);
@@ -138,5 +139,5 @@ span.center{
 }
 
 #help {
-	background: crimson;
+	background: palevioletred;
 }
