Revert "color change palevioletred"
This reverts commit 2b4dc9c78d819f0d231a9a5fd05d2cdd36143e03.

--- a/style.css
+++ b/style.css
@@ -60,12 +60,12 @@ a {
 .page {
 	display: block;
 	width: 100%;
-	height: 700px;
+	height: 2000px;
 }
 
 #home {
-	background: palevioletred;
 	height: 700px;
+	background: crimson;
 	/*
 	background-image: url("https://postfiles.pstatic.net/MjAxOTExMjdfMjY0/MDAxNTc0NzkzNTUwMzg2.b7FRv2Dg7pYY9ca-EDGJCAXfhShdE97SdJ-GZY-UGMUg.LvD8aIouIeLgNJiDAnC9ffz7yUvNmG30wmEBMXSyqmQg.PNG.uglycat8/image.png?type=w773");
 	background-size: 100% auto;
@@ -75,7 +75,6 @@ a {
 
 #statistics {
 	background: white;
-	height: 2000px;
 }
 
 .chart-section {
@@ -87,7 +86,7 @@ a {
 
 .chart-title {
 	text-align: center;
-	color: palevioletred;
+	color: crimson;
 	height: 300px;
 	font-weight: 700; 
 }
@@ -119,7 +118,7 @@ span.center{
 	position: relative;
 	top: 50%;
 	text-align: center;
-	color: palevioletred;
+	color: crimson;
 	line-height: 80%;
 	font-weight: 800;
 	transform: translate(0%, -50%);
@@ -139,5 +138,5 @@ span.center{
 }
 
 #help {
-	background: palevioletred;
+	background: crimson;
 }
