--- a/style.css
+++ b/style.css
@@ -191,7 +191,7 @@ span.center{
 	position: relative;
 	top: 50%;
 	text-align: center;
-	margin: 0%;
+	margin: 0% 5%;
 	color: white;
 	transform: translate(0%, -50%);
 	font-weight: 800;
